# volume-cartographer

./: .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  build_from_source.sh  ubuntu-24.04-noble.Dockerfile  ubuntu-25.04-plucky.Dockerfile  ubuntu-25.10-questing.Dockerfile
apps/: CMakeLists.txt
apps/Canny/: CMakeLists.txt
apps/VC3D/: CBSpline.cpp  CBSpline.hpp  CBezierCurve.cpp  CBezierCurve.hpp  CMakeLists.txt  CMatrixMN.hpp  COverlayItem.cpp  COverlayItem.hpp  COverlayManager.cpp  COverlayManager.hpp  CPointCollectionWidget.cpp  CSegmentationEditorWindow.cpp  CSegmentationEditorWindow.hpp  CSurfaceCollection.cpp  CVectorN.hpp  CVolumeViewer.cpp  CVolumeViewer.hpp  CVolumeViewerView.cpp  CVolumeViewerView.hpp  CVolumeViewerWithCurve.cpp  CVolumeViewerWithCurve.hpp  CWindow.cpp  CWindow.hpp  CWindowContextMenu.cpp  CXCurve.cpp  CXCurve.hpp  CommandLineToolRunner.cpp  CommandLineToolRunner.hpp  ConsoleOutputWidget.cpp  ConsoleOutputWidget.hpp  CubicMultithreadedSpline.hpp  DrawingWidget.cpp  FittedCurve.hpp  GeneralOptions.cpp  GetMemorySize.cpp  HBase.hpp  MathUtils.hpp  OpChain.cpp  OpChain.hpp  PathData.hpp  (+19 more)
apps/src/: GeneratePPM.cpp  LayerFromPPM.cpp  Mesher.cpp  Metadata.cpp  ObjAlphaCompRefinement.cpp  Packager.cpp  ProjectMesh.cpp  Render.cpp  RenderFromPPM.cpp  Segment.cpp  SliceImage.cpp  TestChunkedCompute.cpp  VolPkgExplorer.cpp  VolumeClientApp.cpp  VolumeServer.cpp  VolumeServerApp.cpp  ZarrAlphaComp.cpp  ZarrRenderBlur.cpp  vc_fill_quadmesh.cpp  vc_grow_seg_from_seed.cpp  vc_grow_seg_from_segments.cpp  vc_render_tifxyz.cpp  vc_render_video.cpp  vc_seg_add_overlap.cpp  vc_surface_diff.cpp  vc_tiffxyz_upscale_grounding.cpp  vc_tifxyz2obj.cpp  vc_tifxyz_inp_mask.cpp  vc_tifxyz_winding.cpp
cmake/: BuildFmt.cmake  BuildIGL.cmake  BuildSpdlog.cmake  VCFindDependencies.cmake
core/: CMakeLists.txt
core/include/vc/: BoundingBox.hpp  Cache.hpp  ChunkedTensor.hpp  Color.hpp  DateTime.hpp  Debug.hpp  DiskBasedObjectBaseClass.hpp  Exceptions.hpp  ImageConversion.hpp  LRUCache.hpp  Logging.hpp  Metadata.hpp  PointSet.hpp  PointSetIO.hpp  Reslice.hpp  Segmentation.hpp  SurfaceVoxelizer.hpp  Version.hpp  Volume.hpp  VolumeMask.hpp  VolumePkg.hpp  VolumePkgVersion.hpp
core/include/vc/core/neighborhood/: NeighborhoodGenerator.hpp
core/include/vc/core/types/: ChunkedTensor.hpp  Volume.hpp  VolumePkg.hpp
core/include/vc/core/util/: CostFunctions.hpp  Slicing.hpp  Surface.hpp
core/src/: ChunkedTensor.cpp  DiskBasedObjectBaseClass.cpp  GrowPatch.cpp  GrowSurface.cpp  ImageConversion.cpp  Logging.cpp  Metadata.cpp  Segmentation.cpp  Slicing.cpp  Surface.cpp  SurfaceHelpers.cpp  SurfaceVoxelizer.cpp  Volume.cpp  VolumePkg.cpp
graph/include/vc/graph/: core.hpp  texturing.hpp
graph/src/: core.cpp  texturing.cpp
scripts/: horizontal_fibers_to_patches.py
src/VC3D/src/: CSegmentationEditorWindow.cpp  CSurfaceCollection.hpp  CVolumeViewer.cpp  CVolumeViewer.hpp  CVolumeViewerView.cpp  CVolumeViewerWithCurve.cpp  CVolumeViewerWithCurve.hpp  CWindow.cpp  CWindow.hpp  CWindowContextMenu.cpp  CommandLineToolRunner.cpp  CommandLineToolRunner.hpp  OpsList.hpp  PathData.cpp  SegmentationStruct.hpp  UDataManipulateUtils.cpp  UDataManipulateUtils.hpp  VCAppMain.cpp  VCMain.ui  formsetsrc.hpp
src/apps/src/: ImgToZarr.cpp  Metadata.cpp  ObjAlphaCompRefinement.cpp  Packager.cpp  Render.cpp  RenderTexturing.cpp  VolumeClient.cpp  ZarrAlphaComp.cpp  ZarrRenderBlur.cpp  vc_fill_quadmesh.cpp  vc_grow_seg_from_seed.cpp  vc_grow_seg_from_segments.cpp  vc_render_tifxyz.cpp  vc_render_video.cpp  vc_seg_add_overlap.cpp  vc_tiffxyz_upscale_grounding.cpp  vc_tifxyz_inp_mask.cpp  vc_tifxyz_winding.cpp
src/libvc/include/vc/: CBSpline.hpp  CMatrixMN.hpp  CVectorN.hpp  CXCurve.hpp  ChunkedTensor.hpp  CostFunctions.hpp  CubicMultithreadedSpline.hpp  DiskBasedObjectBaseClass.hpp  HBase.hpp  Iteration.hpp  Logging.hpp  MathUtils.hpp  NDArray.hpp  OrderedPointSet.hpp  Segmentation.hpp  String.hpp  Surface.hpp  SurfaceVoxelizer.hpp  UVecMatOperations.hpp  Volume.hpp
src/libvc/src/: CBSpline.cpp  CBezierCurve.cpp  CXCurve.cpp  Logging.cpp  Segmentation.cpp  Slicing.cpp  Surface.cpp  SurfaceHelpers.cpp  SurfaceVoxelizer.cpp  Volume.cpp
src/libvcui/include/vcui/: CBSpline.hpp  CBezierCurve.hpp  CommandLineToolRunner.hpp  DrawingWidget.hpp  ProgressUtil.hpp  SeedingWidget.hpp  SurfaceTreeWidget.hpp
src/libvcui/src/: CBSpline.cpp  CBezierCurve.cpp  CommandLineToolRunner.cpp  ConsoleOutputWidget.cpp  DrawingWidget.cpp  PathData.cpp  ProgressUtil.cpp  SeedingWidget.cpp  SegmentRenderThread.cpp  SurfaceTreeWidget.cpp
texturing/: CMakeLists.txt
texturing/include/vc/texturing/: CompositeTexture.hpp  FastLayerTexture.hpp  IntegralTexture.hpp  IntersectionTexture.hpp  LayerTexture.hpp
texturing/src/: CompositeTexture.cpp  FastLayerTexture.cpp  IntegralTexture.cpp  IntersectionTexture.cpp  LayerTexture.cpp
